--- a/Index.html
+++ b/Index.html
@@ -1,39 +1,49 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2821
-\cocoatextscaling1\cocoaplatform1{\fonttbl\f0\froman\fcharset0 TimesNewRomanPSMT;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
-\deftab720
-\pard\pardeftab720\partightenfactor0
-
-\f0\fs24 \cf2 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-\'a0 <meta charset="UTF-8">\
-\'a0 <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-\'a0 <title>Lost Valley Ranch - Off-Grid Expansion</title>\
-\'a0 <style>\
-\'a0 \'a0 body \{\
-\'a0 \'a0 \'a0 background-color: #1b1b1b;\
-\'a0 \'a0 \'a0 color: #f0f0f0;\
-\'a0 \'a0 \'a0 font-family: 'Arial', sans-serif;\
-\'a0 \'a0 \'a0 text-align: center;\
-\'a0 \'a0 \'a0 padding: 10vh 5vw;\
-\'a0 \'a0 \}\
-\'a0 \'a0 h1 \{\
-\'a0 \'a0 \'a0 color: #78C257;\
-\'a0 \'a0 \'a0 font-size: 3em;\
-\'a0 \'a0 \}\
-\'a0 \'a0 p \{\
-\'a0 \'a0 \'a0 font-size: 1.5em;\
-\'a0 \'a0 \'a0 margin-top: 1em;\
-\'a0 \'a0 \}\
-\'a0 </style>\
-</head>\
-<body>\
-\
-\'a0 <h1>Lost Valley Ranch Project</h1>\
-\'a0 <p>Providing decentralized mobile connectivity and emergency services to the Rocky Mountains through Helium Mobile.</p>\
-\
-</body>\
-</html>\
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web3 Vacation Ranch</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #0073e6;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    .main-content {
+      text-align: center;
+      margin: 40px;
+    }
+    .button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #0073e6;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    .button:hover {
+      background-color: #005bb5;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome to Web3 Vacation Ranch</h1>
+    <p>Your dream Web3 vacation experience awaits!</p>
+  </header>
+  <div class="main-content">
+    <h2>Book Your Stay Today</h2>
+    <p>Secure your spot at our Web3-powered ranch and enjoy a truly unique experience.</p>
+    <button class="button" onclick="alert('Thank you for booking your stay!')">Book Now</button>
+  </div>
+</body>
+</html>
